# Timekeeper

./: .editorconfig  .gitignore  README.md  TimeKeeper.sln  Timekeeper.sln  build.sh  flutter_rust_bridge.yaml  pubspec.yaml  todo
TK.Android/: .gitignore  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  TK.Android.csproj
Tk.Api/: NotificationManagerService.cs  Notifications.cs  Tk.Api.csproj
Tk.Api.AndroidApi/: AndroidNotificationService.cs  Tk.Api.AndroidApi.csproj
Tk.App/: AlarmBroadcastReceiver.cs  AlarmReceiver.cs  AlarmScheduler.cs  AndroidManifest.xml  AndroidNotificationService.cs  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  INotificationService.cs  Icons.cs  MainActivity.cs  MainApplication.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  NotificationChannelAttribute.cs  Tk.App.Android.csproj  Tk.App.csproj  TkIntents.cs
Tk.App.Android/: AndroidManifest.xml  MainActivity.cs  Tk.App.Android.csproj
Tk.App.Android.Kotlin/: settings.gradle.kts
Tk.App.Linux/: Program.cs  Tk.App.Linux.csproj  Tk.App.Linux.http
Tk.Database/: Tk.Database.csproj  TkDbContext.cs
Tk.Kotlin/: .gitignore  Tk.Kotlin.csproj  timekeeper.aar
Tk.Models/: Result.cs  TestData.cs  Tk.Models.csproj
flutter/: .gitignore  pubspec.yaml
flutter/rust/: Cargo.toml
flutter/rust/src/database/: mod.rs
rust/: Cargo.toml
rust/db_models/: Cargo.toml
rust/db_models/src/: lib.rs  responsibility.rs  responsibility_tag.rs  tag.rs
rust/migration/src/: lib.rs  m20250731_012012_init.rs
rust/src/: lib.rs  main.rs
rust/src/database/: mod.rs
rust/src/frb_api/: mod.rs  state.rs
rust/src/models/: event.rs  mod.rs  task.rs
(+81 files in other folders)
